# robotics-agent-skills

./: .gitignore  README.md
evals/: AGENT_PROMPT.md  EVAL_REPORT.md  PROMPT.md
evals/with-skills/demo_recorder/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
evals/with-skills/demo_recorder/config/: demo_recorder.yaml
evals/with-skills/demo_recorder/demo_recorder/: __init__.py  demo_recorder_node.py  episode_writer.py
evals/with-skills/demo_recorder/launch/: demo_recorder.launch.py
evals/with-skills/demo_recorder/msg/: RecordingStatus.msg
evals/with-skills/demo_recorder/srv/: StartRecording.srv  StopRecording.srv
evals/with-skills/demo_recorder/test/: test_demo_recorder.py
evals/without-skills/demo_recorder/: CMakeLists.txt  README.md  package.xml  setup.py
evals/without-skills/demo_recorder/config/: demo_recorder.yaml
evals/without-skills/demo_recorder/demo_recorder/: demo_recorder_node.py
evals/without-skills/demo_recorder/launch/: demo_recorder.launch.py
evals/without-skills/demo_recorder/msg/: RecordingStatus.msg
evals/without-skills/demo_recorder/srv/: StartRecording.srv  StopRecording.srv
skills/docker-ros2-development/: SKILL.md
skills/robot-bringup/: SKILL.md
skills/robot-perception/: SKILL.md
skills/robotics-design-patterns/: SKILL.md
skills/robotics-security/: SKILL.md
skills/robotics-software-principles/: SKILL.md
skills/robotics-testing/: SKILL.md
skills/ros1/: SKILL.md
skills/ros2/: SKILL.md
skills/ros2-web-integration/: SKILL.md
