<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_recorder</name>
  <version>0.1.0</version>
  <description>
    Records robot demonstration episodes during teleoperation.
    Subscribes to camera images (RealSense wrist cam) and joint states
    (Franka 7-DOF), synchronises them per timestep, and stores structured
    episodes with metadata, quality metrics, and success/failure labels.
  </description>
  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tooling: ament_cmake for message generation + ament_cmake_python for the Python module -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime and build dependencies (depend = build_depend + exec_depend) -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>lifecycle_msgs</depend>

  <!-- Runtime-only dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Required for custom message/service generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
